# ml-maxwell

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-torch-sm50.yml  validate-on-maxwell.yml
artifacts/nccl-2.20.5-sm50/: README.md  build.sh
artifacts/torch-sm50/: README.md  build.sh
docs/: FP16_ON_MAXWELL.md  STATUS.md  UPSTREAM_PRS.md
docs/index/: README.md
vllm-maxwell/: README.md  pyproject.toml
vllm-maxwell/vllm_maxwell/: __init__.py  attention.py  communicator.py  platform.py
